plugin/src/test/resources/annotator/perl/unreachableCode/gotoFromInnerSub.code
sub somesub{
    'before';
    sub Exit {
        'inner before';
        goto something;
        '<error descr="Unreachable code">inner after</error>';
    }
    'after';
    sub preload {
        goto something;
    }
    'after';
}
